# tracing-demo

./: Cargo.toml  LICENSE  README.md  start.sh
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: translate_prompt.tsx
k8s/frontend/: 00_namespace.yml  10_services_ext.yml
k8s/monitoring/: 01_service_discovery_role.yml  02_prometheus_service_account.yml  03_grafana_dashboards.yml  100_opentelemetry_collector.yml  101_prometheus.yml  102_jaeger.yml  103_grafana.yml  11_node_exporter.yml
k8s/services/: 100_greeter.yml  101_translator.yml  103_streamer2.yml  104_task_dispatch.yml  10_monitoring_ext.yml  11_redis.yml  200_ingress.yml
services/frontend/: Dockerfile
services/greeter/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
services/greeter/src/: app.ts  exit.ts  router.ts  server.ts  tracing.ts
services/streamer2/: Cargo.toml  Dockerfile
services/streamer2/src/: main.rs  shutdown.rs  trace_utils.rs
services/streamer2/src/app/: app_metrics.rs  app_responder.rs  app_streaming.rs  app_taskgen.rs  mod.rs  state.rs
services/streamer2/src/commands/: mod.rs
services/streamer2/src/metrics/: mod.rs
services/streamer2/src/middleware/: metrics.rs
services/streamer2/src/services/: client_manager.rs  client_socket_io.rs  mod.rs
services/task_dispatch/: Dockerfile  requirements.txt
services/task_dispatch/src/: __main__.py  model.py  signal_handler.py  task_dispatch.py  task_queue.py
services/translator/: .gitignore  Dockerfile  requirements.txt
(+12 files in other folders)
