[package]
name = "streamer2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
futures = "0.3.30"
metrics = { version = "0.22.3", default-features = false }
metrics-exporter-prometheus = { version = "0.14.0", default-features = false }
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["catch-panic", "trace", "timeout"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.23.0"

opentelemetry = "0.22.0"
opentelemetry-jaeger = "0.21.0"
opentelemetry-jaeger-propagator = "0.1.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
